[package]
name = "jso"
version = "1.3.1"
edition = "2024"

description = "No-BS, no-bloat json library."
keywords = ["json", "parsing"]
categories = ["encoding", "parser-implementations"]
license = "GPL-3.0-only"
repository = "https://github.com/ZenPZero/jso"

include = ["src/", "examples/", "README.md", "CHANGELOG.md", "LICENSE"]
